# curtains

./: CMakeLists.txt  README.md  ackermann.hpp  arith.hpp  arity.hpp  curtains-tests.cpp  curtains-tests.hpp  curtains.hpp  fix_fun.hpp  logical.hpp  rec_err.hpp  run_tests.sh  ski.hpp  swap.hpp  tests.hpp  util.hpp  y_combinator.hpp  zero.hpp
curtains/: compatibility.hpp  config.hpp  core.hpp  curtains_includes.hpp  eval_n.hpp  eval_v.hpp
prelude/: all.hpp  arith.hpp  compose.hpp  cons.hpp  const.hpp  dollar.hpp  fix.hpp  flip.hpp  foldl.hpp  foldr.hpp  get.hpp  id.hpp  if.hpp  list.hpp  logical.hpp  map.hpp  prelude_includes.hpp  tree.hpp
